--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,18 @@
 <body>
     <header>
         <div>
-            <a href="index.html"><img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px"></a> 
+            <div>
+                <a href="index.html"><img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px"></a> 
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="">Ano de 1971</a></li>
+                    <li><a href="">Ano de 2013</a></li>
+                    <li><a href="">Ano de 2014</a></li>
+                    <li><a href="">Ano de 2021</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav>
-            <ul>
-                <li><a href=""><input type="button" value="O ano de 1971"></a></li>
-                <li><a href=""><input type="button" value="O ano de 2013"></a></li>
-                <li><a href=""><input type="button" value="O ano de 2014"></a></li>
-                <li><a href=""><input type="button" value="O ano de 2021"></a></li>
-            </ul>
-        </nav>
     </header>
 </body>
 </html>
