--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -22,5 +22,12 @@
             </nav>
         </div>
     </header>
+
+    <main>
+        <audio> <source src="midia/hino.mp3"></audio>
+        <section>
+            
+        </section>
+    </main>
 </body>
 </html>
