--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -25,8 +25,20 @@
 
     <main>
         <audio> <source src="midia/hino.mp3"></audio>
-        <section>
-            
+        <section class="começo">
+            <div>
+                <div>
+                    <h1>Como tudo se iniciou</h1>
+                </div>
+                <div>
+                    <img src="img/galo-inicio.jpg" alt="" srcset="img/galo-inicio-mobile.webp 430w, img/galo-inicio-desktop.webp 550w" sizes="(max-width:767px) 430px, 550px">
+                </div>
+                <div>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, minima accusamus ducimus nisi atque itaque eveniet molestias debitis a quisquam laudantium, nam blanditiis inventore sed dolorem voluptate dolores magnam aliquid.
+                    Tempora velit, nostrum adipisci sint est quidem, sunt asperiores dignissimos incidunt nesciunt suscipit? Sapiente quis adipisci expedita illum. Illum facilis et totam harum dolore laboriosam repudiandae minus quas rem fugiat.
+                    Nesciunt, sed molestias? Laboriosam voluptates aut totam labore rem, laudantium commodi numquam ipsum nihil sint consectetur id eum quo doloribus. Corporis harum recusandae dolore eos ullam? Accusamus eveniet vel voluptatum.</p>
+                </div>
+            </div>
         </section>
     </main>
 </body>
