--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <audio> <source src="midia/hino.mp3"></audio>
+        <audio loop autoplay> <source src="midia/hino.mp3"></audio>
         <section class="começo">
             <div>
                 <div>
