comment audio line

--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -24,7 +24,7 @@
     </header>
 
     <main>
-        <audio loop autoplay> <source src="midia/hino.mp3" type="audio/mpeg"></audio>
+        <!-- <audio loop autoplay> <source src="midia/hino.mp3" type="audio/mpeg"></audio> -->
         <section class="começo">
             <div>
                 <div>
