first section finish

--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -28,15 +28,14 @@
         <section class="começo">
             <div>
                 <div>
-                    <h1>Como tudo se iniciou</h1>
-                </div>
-                <div>
+                    <figcaption><h1>Como tudo se iniciou</h1></figcaption>
                     <img src="img/galo-inicio.jpg" alt="" srcset="img/galo-inicio-mobile.webp 430w, img/galo-inicio-desktop.webp 550w" sizes="(max-width:767px) 430px, 550px">
                 </div>
-                <div>
+                <div class="lore">
                     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Maiores, minima accusamus ducimus nisi atque itaque eveniet molestias debitis a quisquam laudantium, nam blanditiis inventore sed dolorem voluptate dolores magnam aliquid.
                     Tempora velit, nostrum adipisci sint est quidem, sunt asperiores dignissimos incidunt nesciunt suscipit? Sapiente quis adipisci expedita illum. Illum facilis et totam harum dolore laboriosam repudiandae minus quas rem fugiat.
-                    Nesciunt, sed molestias? Laboriosam voluptates aut totam labore rem, laudantium commodi numquam ipsum nihil sint consectetur id eum quo doloribus. Corporis harum recusandae dolore eos ullam? Accusamus eveniet vel voluptatum.</p>
+                    Nesciunt, sed molestias? Laboriosam voluptates aut totam labore rem, laudantium commodi numquam ipsum nihil sint consectetur id eum quo doloribus. Corporis harum recusandae dolore eos ullam? Accusamus eveniet vel voluptatum. Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, laudantium? Obcaecati quidem, incidunt quae enim non impedit eum velit similique perferendis itaque vitae. Laborum adipisci sunt natus, omnis consequuntur laudantium.
+                    Ipsa earum magni odit tempore, temporibus voluptatem tenetur non sunt commodi quod, quos facere accusamus rerum quae quidem modi vero expedita mollitia! Quas, alias cum quos dignissimos minus ipsum assumenda.</p>
                 </div>
             </div>
         </section>
