update index and style.css

--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -39,6 +39,48 @@
                 </div>
             </div>
         </section>
+
+        <section class="idolos">
+            <div>
+                <h1>Idolos do clube</h1>
+                <div>
+                    <div>
+                        <figcaption><h2>"São" Victor Bagy</h2></figcaption>
+                        <img src="img/victor.jpg" alt="" srcset="img/victor_mobile.webp 400w, img/victor_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                    </div>
+                </div>
+                <div class="reverso">
+                    <div>
+                        <figcaption><h2>Ronaldinho Gaúcho</h2></figcaption>
+                        <img src="img/ronaldo.jpg" alt="" srcset="img/ronaldo_mobile.webp 400w, img/ronaldo_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                    </div>
+                </div>
+                <div>
+                    <div>
+                        <figcaption><h2>HULK</h2></figcaption>
+                        <img src="img/hulk.webp" alt="" srcset="img/hulk_mobile.webp 400w, img/hulk_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                    </div>
+                </div>
+                <div class="reverso">
+                    <div>
+                        <figcaption><h2>Reinaldo</h2></figcaption>
+                        <img src="img/reinaldo.jfif" alt="" srcset="img/reinaldo.webp 400w, img/reinaldo_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad suscipit dignissimos, tempora repellendus nobis fuga non eos iste explicabo id? Iure maiores facere perspiciatis! Cupiditate expedita facilis est laudantium aliquam.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
