--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -81,6 +81,41 @@
                 </div>
             </div>
         </section>
+
+        <section class="rivais">
+            <div>
+                <div>
+                    <figcaption>Cruzeiro, o maior rival</figcaption>
+                    <img src="img/marias.jpg" alt="" srcset="img/marias_mobile.webp 400w, img/marias_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis, dolorem, vero itaque dolor illum totam magni suscipit quia soluta, vitae quibusdam pariatur animi consequuntur corrupti quos earum ut sequi quasi?
+                    Distinctio porro, obcaecati nemo hic nam, quae suscipit recusandae nobis deleniti, accusantium omnis perspiciatis harum vel perferendis culpa aliquid facere numquam earum libero illo. Qui amet veritatis expedita corrupti repellat.
+                    Optio eveniet voluptatum nihil commodi quis voluptas velit earum, iusto, nostrum quae molestias neque, exercitationem ipsa? Animi blanditiis deleniti ad molestiae error. Aspernatur quidem at saepe nemo magnam quos quasi?</p>
+                </div>
+                <div>
+                    <figcaption>Flamengo, o rival de outro estado</figcaption>
+                    <img src="img/framengo.webp" alt="" srcset="img/framengo_mobile.webp 400w, img/framengo_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus omnis praesentium tempore ut temporibus repellat illo unde nisi explicabo. Illum non ea sunt repellendus saepe eveniet numquam eaque vitae deserunt.
+                    Inventore repellendus a provident? Tenetur, architecto facilis exercitationem odio voluptates ratione nisi laborum ut nemo omnis inventore, soluta quo repellendus natus culpa fugiat voluptas labore sint non fugit vitae? Aliquid.
+                    Iure assumenda provident incidunt impedit dicta amet velit, voluptas dolor earum adipisci fuga mollitia maxime temporibus nam natus voluptate ad molestiae est, unde ipsa harum quidem minus eius. Eligendi, aut!</p>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div>
+            <div>
+                <img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px">
+                <p>&copy; 2025 - Projeto Final PWE</p>
+            </div>
+            <div>
+                <h3>Redes Sociais</h3>
+                <p>INSTAGRAM: <a href="https://www.instagram.com/atletico/">instagram.com/atletico</a></p>
+                <p>TWITTER: <a href="https://x.com/atletico">x.com/atletico</a></p>
+                <p>YOUTUBE: <a href="https://www.youtube.com/@atletico">youtube.com/@atletico</a></p>
+                <p>TIKTOK: <a href="https://www.tiktok.com/@atletico">tiktok.com/@atletico</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
