update all site and create 1971 page

--- a/projeto_galo/index.html
+++ b/projeto_galo/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <meta name="keywords" content="galo, atletico mineiro, maior de minas, el mnineiro, galo doido, ronaldinho gaucho, hulk">
+    <meta name="author" content="Caio Henrique Martins Basilio">
+    <meta name="description" content="Site do projeto final de pwe do maior time de minas e do mundo">
+    <title>Site do gigante</title>
 </head>
 <body>
     <header>
@@ -14,7 +17,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="">Ano de 1971</a></li>
+                    <li><a href="1971.html">Ano de 1971</a></li>
                     <li><a href="">Ano de 2013</a></li>
                     <li><a href="">Ano de 2014</a></li>
                     <li><a href="">Ano de 2021</a></li>
