--- a/projeto_galo/1971.html
+++ b/projeto_galo/1971.html
@@ -44,8 +44,8 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, asperiores. Beatae fugiat exercitationem earum nisi officiis. Ducimus animi doloribus rem, debitis, repellendus incidunt, quis magnam nostrum recusandae consequatur inventore quibusdam!
                 Ex, iure vel molestiae quisquam expedita fugit quidem accusantium dolores esse harum ullam vitae recusandae eos, repellendus ut, cupiditate ipsum eum rem consectetur distinctio provident? Voluptas maxime voluptatum accusamus voluptatem?
                 Magnam doloribus recusandae iste commodi laboriosam reiciendis, magni perspiciatis illum dicta dolorem, similique aliquid sapiente maxime rerum officia libero ullam architecto ab, dignissimos aspernatur eius. Odio nesciunt possimus dicta doloremque.</p>
+                <h2>Primeira fase do campeonato</h2>
                 <div>
-                    <h2>Primeira fase do campeonato</h2>
                     <div>
                         <img src="img/fase01.png" alt="" srcset="img/fase01_mobile.webp 400w, img/fase01_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
                         <img src="img/fase01_2.png" alt="" srcset="img/fase01_2_mobile.webp 400w, img/fase01_2_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
@@ -53,6 +53,42 @@
                 </div>
             </div>
         </section>
+        <section class="segunda">
+            <h2>Segunda fase do campeonato</h2>
+            <div>
+                <div>
+                    <img src="img/fase02_a.png" alt="" srcset="img/fase02_a_mobile.webp 400w, img/fase02_a_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    <img src="img/fase02_b.png" alt="" srcset="img/fase02_b_mobile.webp 400w, img/fase02_b_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                    <img src="img/fase02_c.png" alt="" srcset="img/fase02_c_mobile.webp 400w, img/fase02_c_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                </div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo, atque voluptatibus. Suscipit labore sequi consequuntur quia quae, excepturi eligendi soluta dolore saepe eius, ullam quam quidem vero in quos. Aliquid.
+                Iusto enim laudantium praesentium adipisci quam dolorem perspiciatis placeat nesciunt. Quo, reiciendis commodi placeat numquam maiores ad voluptates asperiores magnam, corrupti repellat facere distinctio, quaerat obcaecati animi tempora ex impedit.
+                In suscipit fugiat eum dolor at, consequuntur animi minima incidunt vitae voluptatum excepturi non obcaecati reiciendis hic recusandae sapiente corporis error rem! Aliquam, dolorum architecto? Quae voluptatem reprehenderit illo vel?</p>
+            </div>
+        </section>
+
+        <section>
+            <div>
+                <h1>Na decisão, Galo Campeão</h1>
+                <img src="img/cam.webp" alt="" srcset="img/cam_mobile.webp 400w, img/cam_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <div>
+            <div>
+                <img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px">
+                <p>&copy; 2025 - Projeto Final PWE</p>
+            </div>
+            <div>
+                <h3>Redes Sociais</h3>
+                <p>INSTAGRAM: <a href="https://www.instagram.com/atletico/">instagram.com/atletico</a></p>
+                <p>TWITTER: <a href="https://x.com/atletico">x.com/atletico</a></p>
+                <p>YOUTUBE: <a href="https://www.youtube.com/@atletico">youtube.com/@atletico</a></p>
+                <p>TIKTOK: <a href="https://www.tiktok.com/@atletico">tiktok.com/@atletico</a></p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
