--- a/projeto_galo/2014.html
+++ b/projeto_galo/2014.html
@@ -3,9 +3,106 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+            <div>
+            <div>
+                <a href="index.html"><img src="img/galo-logo.png" alt="Logo Do clube atletico mineiro" srcset="img/galo-logo-mobile.webp 65w, img/galo-logo-desk.webp 125w" sizes="(max-width: 767px) 125px, 125px"></a> 
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="1971.html">Ano de 1971</a></li>
+                    <li><a href="">Ano de 2013</a></li>
+                    <li><a href="2014.html">Ano de 2014</a></li>
+                    <li><a href="">Ano de 2021</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        <section class="inicio começo">
+            <div>
+                <div>
+                    <h1>O inicio da temporada de 2014</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, facere! Rem, eos debitis! Consequatur, deleniti. Est tempora esse vel illum impedit cum ipsa non quae eveniet, obcaecati minima qui quisquam?
+                    Voluptatibus dicta molestias blanditiis excepturi nihil in nostrum libero, nulla aliquam quidem nemo atque sit, harum temporibus fuga. Animi temporibus exercitationem et illum corporis est debitis beatae eos dolore molestiae.
+                    Perspiciatis, ut! Excepturi sed tempore odit dolor, ad praesentium est totam quas nihil amet, rerum repellat consectetur laborum architecto necessitatibus, delectus quidem veniam deserunt? Dolores, voluptatum. Doloremque blanditiis nobis dignissimos!</p>
+                </div>
+                <div>
+                    <img src="img/recopa.jpg" alt="" srcset="img/recopa_mobile.webp 400w, img/recopa_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                </div>
+            </div>
+        </section>
+
+        <section class="brasil">
+            <div>
+                <div class="first">
+                    <div>
+                        <h1>A historica campanha para a Copa do Brasil 2014</h1>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum eaque voluptatem quibusdam. Ipsum deserunt, corrupti ea consequatur reprehenderit voluptates nemo! Veniam nesciunt obcaecati ut esse libero hic ratione sequi.
+                        Aut dicta unde eveniet ex omnis libero iusto nihil nemo quo exercitationem quod molestiae mollitia odio animi rerum optio impedit et, consequuntur ut similique vero doloribus praesentium magnam. Consequuntur, officiis.</p>
+                    </div>
+                    <img src="img/2014.jpeg" alt="" srcset="img/2014_mobile.webp 400w, img/2014_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                </div>
+                <h2>Palmeiras o primeiro desafio</h2>
+                <div class="partidas">
+                    <div class="jogo">
+                        <img src="img/camxpal.webp" alt="" srcset="img/camxpal_mobile.webp 400w, img/camxpal_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                        <figcaption><h3>Jogo de ida:</h3> <p>PAL 0x1 CAM</p></figcaption>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                    </div>
+                    <div class="jogo">
+                        <img src="img/palvolta.webp" alt="" srcset="img/palvolta_mobile.webp 400w, img/palvolta_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                        <figcaption><h3>Jogo de ida:</h3> <p>CAM 2x0 PAL</p></figcaption>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="campanha">
+            <h2>A quartas de final</h2>
+            <div class="quarta">
+                    <div class="jogo">
+                        <img src="img/corida.jpeg" alt="" srcset="img/corida_mobile.webp 400w, img/corida_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                        <figcaption><h3>Jogo de ida:</h3> <p>COR 2x0 CAM</p></figcaption>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                    </div>
+                    <div class="jogo">
+                        <img src="img/corvolta.webp" alt="" srcset="img/corvolta_mobile.webp 400w, img/corvolta_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                        <figcaption><h3>Jogo de ida:</h3> <p>CAM 4x1 COR</p></figcaption>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                    </div>
+            </div>
+            <h2>A semi-final</h2>
+            <div class="quarta">
+                    <div class="jogo">
+                        <img src="img/flaida.webp" alt="" srcset="img/flaida_mobile.webp 400w, img/flaida_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                        <figcaption><h3>Jogo de ida:</h3> <p>FLA 2x0 CAM</p></figcaption>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                    </div>
+                    <div class="jogo">
+                        <img src="img/flavolta.jpg" alt="" srcset="img/flavolta_mobile.webp 400w, img/flavolta_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                        <figcaption><h3>Jogo de ida:</h3> <p>CAM 4x1 FLA</p></figcaption>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui natus similique consequuntur rerum. Aut rerum sit atque, fugit quas doloremque tempore quod illum unde id mollitia dolor accusamus inventore officia?</p>
+                    </div>
+            </div>
+        </section>
+
+        <section class="final">
+            <h1>A grande final</h1>
+            <div class="jogo1">
+                    <div>
+                        <h2>O primeiro jogo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem illum eaque voluptatem quibusdam. Ipsum deserunt, corrupti ea consequatur reprehenderit voluptates nemo! Veniam nesciunt obcaecati ut esse libero hic ratione sequi.</p>
+                    </div>
+                    <img src="img/copa14.webp" alt="" srcset="img/copa14_mobile.webp 400w, img/copa14_desktop.webp 550w" sizes="(max-width:767px) 400px, 550px">
+                </div>
+        </section>
+    </main>
 </body>
 </html>
